cmake_minimum_required(VERSION 3.22)
project(cpp_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(structTest structTest.cpp)
add_executable(classTest classTest.cpp)
add_executable(strtok_sTest strtok_sTest.cpp)
add_executable(tree tree.cpp)