cmake_minimum_required(VERSION 3.22)
project(cpp_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(structTest structTest.cpp)
add_executable(classTest classTest.cpp)
add_executable(strtok_sTest strtok_sTest.cpp)
add_executable(tree tree.cpp)
add_executable(linkList linkList.cpp)
add_executable(type type.cpp)
add_executable(graph graph.cpp)
add_executable(heap heap.cpp)
add_executable(bag bag.cpp)
add_executable(dicTree trie.cpp)
add_executable(binIndexedTree binIndexedTree.cpp)